Make StatisticianRepository use Hibernate and entities